# Controller

./: .gitignore  .gitmodules  README.md
.github/workflows/: docs_workflow.yml  firmware_workflow.yml  hardware_workflow.yml
CAD/: Controller Test Stand.FCStd  Thermocline Logo Stencil.kra
Docs/: conf.py  index.rst
Firmware/: .gitignore  CMakeLists.txt  PICO_4.3.ino.uf2  README.md  fault.c  globals.c  lv_conf.h  main.c  platformio.ini
Firmware/HMI/: README.md  platformio.ini
Firmware/HMI/include/: lv_conf.h  touch.h
Firmware/HMI/src/: main.cpp
Firmware/Mainboard/: build_flags.py  example.json  platformio.ini
Firmware/Mainboard/.cache/clangd/index/: ADG728.cpp.4700ACA7D10B3173.idx  ADG728.h.D440F090BF1ED430.idx  FreeRTOSConfig.h.A9B2CDB3CE0C2E90.idx  main.cpp.FA0370D8971BDE69.idx  pindefs.h.553D650B541D0645.idx
Firmware/Mainboard/include/: pindefs.h
Firmware/Mainboard/lib/FreeRTOSConfig/: FreeRTOSConfig.h
Firmware/Mainboard/lib/communication/: CommTask.cpp  CommTask.h  Command.h  CommandProcessor.cpp  CommandProcessor.h  README.md
Firmware/Mainboard/lib/leds/: fault_led.cpp  fault_led.h
Firmware/Mainboard/src/: main.cpp
Firmware/boards/: crowpanel_pico_hmi_43.json  esp32-s3-devkitc-1-myboard.json
Firmware/cmake/: gen_tcode_build_info.cmake
Firmware/include/: FreeRTOSConfig.h  calibration.h  constants.h  fault.h  freertos_cpu_load.h  globals.h  hysteresis.h  lv_conf.h  pindefs.h  tools.h  touch.h
Firmware/lib/: freertos_support.c  tools.c
Firmware/lib/DHT20-master/: README.md
Firmware/lib/gt911-arduino-main/: TAMC_GT911.cpp  TAMC_GT911.h
Firmware/lib/hmi_uart/: hmi_uart.c  hmi_uart.h  hmi_uart.pio
Firmware/lib/lvgl/src/demos/widgets/: lv_demo_widgets.c  lv_demo_widgets.h
Firmware/lib/neopixel_ws2812/: neopixel_ws2812.c  neopixel_ws2812.h  ws2812.pio
Firmware/lib/pico_adg728/: ADG728.c  ADG728.h  README.md
Firmware/lib/sht35/: sht35.c  sht35.h
Firmware/lib/ui/: actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui_font_archivo.c  ui_image_monk.c  ui_image_thermocline_logo__large_.c  ui_simple.c  ui_simple.h  vars.h
Firmware/src/: CrowPanel_Pico_Display-4.3_Demo.ino  crowpanel_pins.h  main.cpp  touch.h  ui.c  ui.h
Firmware/tasks/: analog_task.c  analog_task.h  interior_led_task.c  interior_led_task.h  safety_task.c  safety_task.h  serial_task.c  serial_task.h  sim_thermo_system_task.c  sim_thermo_system_task.h  status_led_task.c  status_led_task.h  thermo_control_task.c  thermo_control_task.h
Firmware/tasks/states/: chamber_context.h  chamber_dispatch.c  chamber_outputs.c  chamber_outputs.h  chamber_states.h  chamber_transition.c  chamber_transition.h  state_cool_fast.c  state_cool_slow.c  state_defrost.c  state_dehumidify.c  state_fault.c  state_heating.c  state_idle.c  state_standby.c
Hardware/: .gitignore  config.kibot.yaml  main.kibot.yaml
Hardware/Complete-System/: Complete-System.kicad_pro  Complete-System.kicad_sch  sym-lib-table
Hardware/EG-498-Temperature-Chamber-Team-Thermocline/: EG-498-Temperature-Chamber-Team-Thermocline.kicad_pcb  EG-498-Temperature-Chamber-Team-Thermocline.kicad_pro  EG-498-Temperature-Chamber-Team-Thermocline.kicad_sch  fp-lib-table
Hardware/Interconnect-Board/: Interconnect-Board.kicad_pcb  Interconnect-Board.kicad_pro  Interconnect-Board.kicad_sch
Hardware/Main-Board/: CurrentSensor.kicad_sch  Main-Board.kicad_pcb  Main-Board.kicad_prl-bak  Main-Board.kicad_pro  Main-Board.kicad_pro-bak  Main-Board.kicad_sch  ThermoDriver.kicad_sch  ac_switch.kicad_sch  extSSR.kicad_sch  fp-lib-table  sym-lib-table
UI/ThermoUI/: ThermoUI.eez-project  ThermoUI.eez-project-ui-state
